<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/dimen_8dp"
        android:paddingRight="@dimen/dimen_8dp"
        android:paddingTop="@dimen/activity_vertical_margin">

        <android.support.v7.widget.CardView xmlns:cardview="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            cardview:cardCornerRadius="@dimen/dimen_2dp"
            cardview:cardElevation="@dimen/dimen_4dp"
            cardview:cardUseCompatPadding="true">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <io.codetail.widget.RevealFrameLayout
                    xmlns:android="http://schemas.android.com/apk/res/android"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/revealframe">



                        <ImageView
                            android:id="@+id/imageView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:adjustViewBounds="true"
                            android:contentDescription="@string/image"
                            android:scaleType="fitXY"
                            android:src="@drawable/bg_home" />



                        <LinearLayout
                            android:id="@+id/linearView"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:background="@color/twitter"
                            android:gravity="center_vertical"
                            android:orientation="vertical"
                            android:visibility="gone">

                            <LinearLayout
                                android:id="@+id/layoutButtons"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_horizontal"
                                android:orientation="vertical"
                                android:visibility="gone">

                                <Button
                                    style="@style/Button"

                                    android:layout_marginBottom="@dimen/activity_vertical_margin"
                                    android:text="@string/duplicate" />

                                <Button
                                    style="@style/Button"

                                    android:layout_marginBottom="@dimen/activity_vertical_margin"
                                    android:text="@string/schedule" />

                                <Button
                                    style="@style/Button"
                                    android:text="@string/delete" />


                            </LinearLayout>

                        </LinearLayout>

                </io.codetail.widget.RevealFrameLayout>


                <TextView
                    android:id="@+id/tvName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/revealframe"
                    android:fontFamily="sans-serif-medium"
                    android:paddingBottom="@dimen/dimen_8dp"
                    android:paddingLeft="@dimen/dimen_24dp"
                    android:paddingRight="@dimen/dimen_24dp"
                    android:paddingTop="@dimen/dimen_32dp"
                    android:text="Name: "
                    android:textColor="@color/grey"
                    android:textSize="@dimen/dimen_16sp"
                    android:textStyle="italic" />

                <TextView
                    android:id="@+id/tvnickName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tvName"
                    android:fontFamily="sans-serif-medium"
                    android:paddingBottom="@dimen/dimen_8dp"
                    android:paddingLeft="@dimen/dimen_24dp"
                    android:paddingRight="@dimen/dimen_24dp"
                    android:paddingTop="@dimen/dimen_8dp"
                    android:text="Nickname: "
                    android:textColor="@color/grey"
                    android:textSize="@dimen/dimen_16sp"
                    android:textStyle="italic" />

                <TextView
                    android:id="@+id/tvFlaId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tvnickName"
                    android:fontFamily="sans-serif-medium"
                    android:paddingBottom="@dimen/dimen_8dp"
                    android:paddingLeft="@dimen/dimen_24dp"
                    android:paddingRight="@dimen/dimen_24dp"
                    android:paddingTop="@dimen/dimen_8dp"
                    android:text="FlatId: "
                    android:textColor="@color/grey"
                    android:textSize="@dimen/dimen_16sp"
                    android:textStyle="italic" />

                <TextView
                    android:id="@+id/tvAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tvFlaId"
                    android:fontFamily="sans-serif-medium"
                    android:paddingBottom="@dimen/dimen_8dp"
                    android:paddingLeft="@dimen/dimen_24dp"
                    android:paddingRight="@dimen/dimen_24dp"
                    android:paddingTop="@dimen/dimen_8dp"
                    android:text="Address: "
                    android:textColor="@color/grey"
                    android:textSize="@dimen/dimen_16sp"
                    android:textStyle="italic" />

                <TextView
                    android:id="@+id/tvOwner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:layout_below="@id/tvAddress"
                    android:paddingBottom="@dimen/dimen_32dp"
                    android:paddingLeft="@dimen/dimen_24dp"
                    android:paddingRight="@dimen/dimen_24dp"
                    android:paddingTop="@dimen/dimen_8dp"
                    android:text="Admin: "
                    android:textColor="@color/grey"
                    android:textSize="@dimen/dimen_16sp"
                    android:textStyle="italic" />



                <ImageButton
                    android:id="@+id/launchTwitterAnimation"
                    android:layout_width="@dimen/dimen_56dp"
                    android:layout_height="@dimen/dimen_56dp"
                    android:layout_alignBottom="@id/revealframe"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginBottom="-28dp"
                    android:layout_marginEnd="@dimen/activity_vertical_margin"
                    android:layout_marginRight="@dimen/activity_vertical_margin"
                    android:adjustViewBounds="true"
                    android:background="@drawable/rounded_button"
                    android:contentDescription="@string/image"
                    android:elevation="@dimen/dimen_4dp"
                    android:src="@drawable/fb_icon" />

            </RelativeLayout>


        </android.support.v7.widget.CardView>

    </LinearLayout>

</ScrollView>
